[package]
name = "cat-rs"
description = "cat client with rust"
keywords = ["cat", "ffi"]
readme = "README.md"
repository = "https://github.com/uuhan/cat-rs"
homepage = "https://github.com/uuhan/cat-rs"
version = "0.1.0"
license = "MIT"
authors = ["uuhan <xuminhui189@gmail.com>"]
edition = "2018"
include = [
  "src/**/*",
  "lib/cat/lib/c/**/*",
  "Cargo.toml",
  "build.rs",
]

[build-dependencies]
cmake = "0.1"
bindgen = "^0.59"

[dependencies]
libc = "^0.2.48"
log = "^0.4.6"
serde_json = "^1.0.38"
num_cpus = "^1.10.0"
abyss-promise = "0.1.1"

[dependencies.nodex]
version = "0.1.3"

[dependencies.serde]
version = "^1.0.88"
features = ["derive"]

[dev-dependencies]
tokio = "^0.1.16"
